Bug 458718 - Only first word of Metadata is written to file
Summary: Only first word of Metadata is written to file
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: Rendering & Export (other bugs)
Version First Reported In: 22.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: erjiang
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-04 21:37 UTC by sedrubal
Modified: 2022-12-18 22:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sedrubal 2022-09-04 21:37:28 UTC
SUMMARY

When you render a project and enable "Export metadata" (after ticking "More options" in the "Rendering" dialogue and if your project title consists of multiple words separated by a space, only the first word will be written to the metadata of the file.

STEPS TO REPRODUCE
1. Create a project with the title "Example title"
2. When you render the project click on "More options" > "Export metadata"
3. I'm not sure if it is important but I'm using a custom preset using mp4 container and libx264
4. Render the project
5. Inspect the rendered file with exiftool

OBSERVED RESULT

The title will be "Example"

EXPECTED RESULT

The title should be "Example title"

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5

ADDITIONAL INFORMATION
Most likely the generated command should quote the project title. The generated command looks like this:

> [...] meta.attr.title.markup=Example title

I assume it might be fixed if it looks like this:

> [...] meta.attr.title.markup='Example title'
Comment 1 erjiang 2022-09-11 18:09:59 UTC
Confirmed on latest master, although the fix seems to be a little more involved than wrapping the strings. The .mlt file passed to the renderer loses the words after the space in the <consumer /> tag.
Comment 2 erjiang 2022-09-25 00:44:30 UTC
I think inserting the metadata into the generated XML for MLT directly instead of first storing it in the parameters is the right way to go, because the parameter names (e.g. "meta.attr.title.markup") are MLT-specific and not related or directly useful for ffmpeg. Thus, I don't see this making the UI worse or less useful for advanced users.

Changing the parameters to be a QStringList or similar should be a future improvement to whitespace-proof the parameters.
Comment 3 erjiang 2022-09-28 03:51:42 UTC
Git commit a1304676a61959783884f90473fd2306a6ffd835 by Eric Jiang.
Committed on 28/09/2022 at 03:50.
Pushed by erjiang into branch 'master'.

Put metadata directly in XML from doc

Putting the project metadata in the parameters text hit an issue with
whitespace in the metadata. Skipping the parameters text and putting it
directly in the XML preserves the whitespace.

M  +11   -10   src/dialogs/renderwidget.cpp

https://invent.kde.org/multimedia/kdenlive/commit/a1304676a61959783884f90473fd2306a6ffd835
Comment 4 sedrubal 2022-09-28 10:59:59 UTC
Thank you very much!
Comment 5 Julius Künzel 2022-12-18 22:07:16 UTC
Git commit 3a5c22910267c490960c36179f2933b3c119c2eb by Julius Künzel.
Committed on 18/12/2022 at 22:06.
Pushed by jlskuz into branch 'master'.

[Render Settings] Reduce conversion between String and Map

Using a single string for render parameters caused several issues in the
past. This should reduce the risk for bugs.

Related to a1304676a61959783884f90473fd2306a6ffd835 and
05fa0568d1511ab65dae958a20c342204937baca
Related: bug 462650

M  +2    -2    src/dialogs/renderpresetdialog.cpp
M  +64   -72   src/dialogs/renderwidget.cpp
M  +3    -1    src/dialogs/renderwidget.h
M  +32   -15   src/renderpresets/renderpresetmodel.cpp
M  +9    -3    src/renderpresets/renderpresetmodel.hpp
M  +3    -3    src/renderpresets/renderpresetrepository.cpp
M  +27   -8    tests/rendermodeltest.cpp

https://invent.kde.org/multimedia/kdenlive/commit/3a5c22910267c490960c36179f2933b3c119c2eb