Put metadata directly in XML from doc

Putting the project metadata in the parameters text hit an issue with
whitespace in the metadata. Skipping the parameters text and putting it
directly in the XML preserves the whitespace.

BUG: 458718